2002-09-20  Richard Williamson   <rjw@apple.com>

        Made double and triple click selection behave like
        like other selection in OS X.  That is, selection happens
        on mouse down, not mouse up, and can be extended by
        further dragging.  Triple click followed by dragging extends
        the selection a line at a time.
        
        * khtml/khtml_events.cpp:
        * khtml/khtml_events.h:
        * khtml/khtml_part.cpp:
        (KHTMLPart::customEvent):
        (firstSlaveAt):
        (lastSlaveAt):
        (startAndEndLineNodesIncludingNode):
        (KHTMLPart::khtmlMousePressEvent):
        (KHTMLPart::khtmlMouseDoubleClickEvent):
        (KHTMLPart::khtmlMouseMoveEvent):
        * khtml/khtml_part.h:
        * khtml/khtmlpart_p.h:
        * khtml/khtmlview.cpp:
        * khtml/khtmlview.h:
        * khtml/xml/dom_elementimpl.cpp:
        (ElementImpl::setAttribute):
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge mouseUp:]):

2002-09-20  Darin Adler  <darin@apple.com>

        * kwq/KWQFileButton.h: Add an icon.
        * kwq/KWQFileButton.mm:
        (KWQFileButton::KWQFileButton): Nil out icon.
        (KWQFileButton::~KWQFileButton): Release icon.
        (KWQFileButton::setFilename): Get icon with [NSWorkspace iconForFile:].
        (KWQFileButton::clicked): Set prompt string to "Choose", and start directory to "~".
        (KWQFileButton::sizeHint): Pad more for icon width.
        (KWQFileButton::frameGeometry): Ditto.
        (KWQFileButton::setFrameGeometry): Ditto.
        (KWQFileButton::paint): Draw icon. Draw "no file selected" if no filename.

        * kwq/KWQKFileItem.mm: Our "nonimplementation" is good enough. Stop complaining.
        * kwq/KWQKnetaccess.mm: Ditto. Also just extract path when asked to download.

2002-09-20  Darin Adler  <darin@apple.com>

	Some first steps toward implementing input=file.

        * khtml/rendering/render_form.cpp: